--- a/percentiles.ipynb
+++ b/percentiles.ipynb
@@ -805,7 +805,7 @@
     "# peso\n",
     "percentiles_peso = pd.read_csv('wtageinf.csv', index_col='Agemos')\n",
     "\n",
-    "pesadas = pd.read_csv('pesadas2.txt', index_col='fecha', parse_dates=True, dayfirst=True)\n",
+    "pesadas = pd.read_csv('pesadas.txt', index_col='fecha', parse_dates=True, dayfirst=True)\n",
     "pesadas['meses'] = (pesadas.index - pesadas.index[0]).days / 30\n",
     "\n",
     "percentiles_peso.query('Sex==1')[['P3', 'P5', 'P10', 'P25', 'P50', 'P75', 'P90', 'P95', 'P97']].plot(ax=ax_peso, cmap='jet', legend=None, linewidth=5, alpha=0.5)\n",
