--- a/percentiles.ipynb
+++ b/percentiles.ipynb
@@ -832,7 +832,10 @@
     "ax_talla.set_xlim([0, 3])\n",
     "ax_talla.set_ylim([45, 65])\n",
     "\n",
-    "ax_talla.grid(True)"
+    "ax_talla.grid(True)\n",
+    "\n",
+    "fig.show()"
+    ""
    ]
   },
   {
